<resources>
    <string name="app_name">ESP32摄像头</string>
    <string name="main_title">ESP32远程监控</string>
    <string name="main_subtitle">微联编程出品</string>
    <string name="camera_preview">摄像头画面</string>
    <string name="fullscreen_play">最大化播放</string>
    <string name="exit_fullscreen">退出全屏</string>
    <string name="settings">设置</string>
    <string name="cmd_up">向上</string>
    <string name="cmd_down">向下</string>
    <string name="cmd_left">向左</string>
    <string name="cmd_right">向右</string>
    <string name="cmd_reset">复位</string>
    <string name="mqtt_settings_title">云台指令MQTT设置</string>
    <string name="stream_settings_title">视频流设置</string>
    <string name="field_mjpeg_url">MJPEG 视频流地址</string>
    <string name="field_broker">MQTT Broker</string>
    <string name="field_username">MQTT 用户名</string>
    <string name="field_password">MQTT 密码</string>
    <string name="field_topic">MQTT Topic</string>
    <string name="settings_dialog_title">连接参数设置</string>
    <string name="settings_dialog_subtitle">视频流与控制通道配置</string>
    <string name="test">测试</string>
    <string name="ok">确定</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="mqtt_broker_hint">Broker，例如 tcp://iot.welinklab.com:1883</string>
    <string name="mqtt_username_hint">用户名</string>
    <string name="mqtt_password_hint">密码</string>
    <string name="mqtt_topic_hint">下发 Topic，例如 /command</string>
    <string name="mjpeg_url_hint">例如 http://132.232.209.150:8080/mjpeg</string>
    <string name="config_empty_error">配置不能为空</string>
    <string name="config_saved">MQTT配置已保存</string>
    <string name="config_saved_all">配置已保存并生效</string>
    <string name="config_test_running">正在测试连接...</string>
    <string name="config_test_passed">测试通过，可以保存</string>
    <string name="config_need_retest">配置已变更，请先点击测试</string>
    <string name="test_mjpeg_failed">MJPEG连接失败</string>
    <string name="test_mqtt_failed">MQTT连接失败</string>
    <string name="test_result_icon">测试结果图标</string>
    <string name="stream_error_detail_title">视频流测试详情</string>
    <string name="mqtt_error_detail_title">MQTT测试详情</string>
    <string name="copyright_notice">Copyright © 2026.微联编程 All rights reserved.</string>
</resources>
